--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -26,6 +26,11 @@
                             <input type="hidden" name="tokenId" th:value="${signUpToken.id}">
                             <input type="hidden" name="token" th:value="${signUpToken.token}">
                             <div class="form-group">
+                                <label for="username">Usuario</label>
+                                <input type="text" class="form-control" minlength="6" maxlength="15" th:errorclass="is-invalid" th:field="*{username}" id="username" placeholder="Ingrese su Usuario" autofocus required>
+                                <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+                            </div>
+                            <div class="form-group">
                                 <label for="firstName">Nombre</label>
                                 <input type="text" class="form-control" minlength="2" maxlength="50" th:errorclass="is-invalid" th:field="*{firstName}" id="firstName" placeholder="Ingrese su Nombre" required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
