--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -20,8 +20,8 @@
                     <div class="card-body">
                         <form th:action="@{/login}" method="post">
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" name="username" id="email" minlength="6" maxlength="50" placeholder="Ingrese su Email" autofocus required>
+                                <label for="username">Usuario o Email</label>
+                                <input type="text" class="form-control" name="username" id="username" minlength="6" maxlength="50" placeholder="Ingrese su Usuario o Email" autofocus required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Clave</label>
