--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -19,7 +19,7 @@
         </ul>
         <ul sec:authorize="isAuthenticated()" class="navbar-nav">
             <li class="nav-item">
-                <span class="nav-link active" sec:authentication="principal.name"></span>
+                <span class="nav-link active" sec:authentication="principal.username"></span>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/logout}">Salir</a>
