--- a/src/main/resources/templates/publication.html
+++ b/src/main/resources/templates/publication.html
@@ -27,6 +27,10 @@
         </div>
     </div>
 
+    <ul class="list-group" th:each="msg : ${publication.messages}">
+        <li class="list-group-item">[<b th:text="${msg.dateTime}"></b>]: <span th:text="${msg.message}"></span></li>
+    </ul>
+
     <footer th:replace="common/footer :: footer"/>
 
 </div>
