--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,13 +7,12 @@
 
 <nav th:replace="common/navbar :: navbar"/>
 
-<!--/*@thymesVar id="Publication" type="ar.com.vendepor.vendepor48.domain"*/-->
 
 <div class="container">
 
     <div class="row">
         <div th:each="publication : ${publications}" class="col">
-
+            <!--/*@thymesVar id="publication" type="ar.com.vendepor.vendepor48.domain.Publication"*/-->
             <div class="card">
                 <img th:src="@{${'/publication/img/' + publication.id}}" class="card-img-top" alt="...">
                 <div class="card-body">
