--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <nav th:fragment="navbar" class="navbar navbar-expand-lg p-3 px-md-4 mb-5 navbar-dark bg-primary border-bottom shadow-sm">
-    <h5><a class="navbar-brand" th:href="@{/home}">Vende por 48</a></h5>
+    <h5><a class="navbar-brand" th:href="@{/}">Vende por 48</a></h5>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,6 +20,9 @@
         <ul sec:authorize="isAuthenticated()" class="navbar-nav">
             <li class="nav-item">
                 <span class="nav-link active" sec:authentication="principal.username"></span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/publication/new}">Publicá</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/logout}">Salir</a>
