--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
     <hr>
 
     <div class="row mb-3">
-        <div sec:authorize="!isAuthenticated()" class="col-md-4">
+        <div sec:authorize="!isAuthenticated()" class="col-md-6">
             <div class="card-deck">
                 <div class="card mb-6 shadow-sm">
                     <div class="card-header">
@@ -27,17 +27,17 @@
                             <input type="hidden" name="token" th:value="${signUpToken.token}">
                             <div class="form-group">
                                 <label for="username">Usuario</label>
-                                <input type="text" class="form-control" minlength="6" maxlength="15" th:errorclass="is-invalid" th:field="*{username}" id="username" placeholder="Ingrese su Usuario" autofocus required>
+                                <input type="text" class="form-control" minlength="6" maxlength="15" th:errorclass="is-invalid" th:field="*{username}" id="username" placeholder="Ingresá tu Usuario" autofocus required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
                             </div>
                             <div class="form-group">
                                 <label for="firstName">Nombre</label>
-                                <input type="text" class="form-control" minlength="2" maxlength="50" th:errorclass="is-invalid" th:field="*{firstName}" id="firstName" placeholder="Ingrese su Nombre" required>
+                                <input type="text" class="form-control" minlength="2" maxlength="50" th:errorclass="is-invalid" th:field="*{firstName}" id="firstName" placeholder="Ingresá tu Nombre" required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
                             </div>
                             <div class="form-group">
                                 <label for="lastName">Apellido</label>
-                                <input type="text" class="form-control" minlength="2" maxlength="50" th:errorclass="is-invalid" th:field="*{lastName}" id="lastName" placeholder="Ingrese su Apellido" required>
+                                <input type="text" class="form-control" minlength="2" maxlength="50" th:errorclass="is-invalid" th:field="*{lastName}" id="lastName" placeholder="Ingresá tu Apellido" required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
                             </div>
                             <hr>
