--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -11,7 +11,7 @@
 <div class="container">
 
     <div class="row mb-3">
-        <div sec:authorize="!isAuthenticated()" class="col-md-4">
+        <div sec:authorize="!isAuthenticated()" class="col-md-6">
             <div class="card-deck">
                 <div class="card mb-6 shadow-sm">
                     <div class="card-header">
@@ -21,11 +21,11 @@
                         <form th:action="@{/login}" method="post">
                             <div class="form-group">
                                 <label for="username">Usuario o Email</label>
-                                <input type="text" class="form-control" name="username" id="username" minlength="6" maxlength="50" placeholder="Ingrese su Usuario o Email" autofocus required>
+                                <input type="text" class="form-control" name="username" id="username" minlength="6" maxlength="50" placeholder="Ingresá tu Usuario o Email" autofocus required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Clave</label>
-                                <input type="password" class="form-control" name="password" id="password" minlength="6" maxlength="15" placeholder="Ingrese su Clave" required>
+                                <input type="password" class="form-control" name="password" id="password" minlength="6" maxlength="15" placeholder="Ingresá tu Clave" required>
                             </div>
                             <div class="invalid-feedback d-block" th:if="${param.error != null}">Usuario o Clave inválidos</div>
                             <hr>
