--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,7 +11,7 @@
 <div class="container">
 
     <div class="row mb-3">
-        <div sec:authorize="!isAuthenticated()" class="col-md-4">
+        <div sec:authorize="!isAuthenticated()" class="col-md-6">
             <div class="card-deck">
                 <div class="card mb-6 shadow-sm">
                     <div class="card-header">
@@ -26,7 +26,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="password">Clave</label>
-                                <input type="password" class="form-control" min="0000000000" max="3333333333" th:errorclass="is-invalid" th:field="*{password}" id="password" placeholder="Ingrese su Clave" required>
+                                <input type="password" class="form-control" minlength="6" maxlength="15" th:errorclass="is-invalid" th:field="*{password}" id="password" placeholder="Ingrese su Clave" required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                             </div>
                             <hr>
