--- a/src/main/resources/templates/publication/detail.html
+++ b/src/main/resources/templates/publication/detail.html
@@ -11,7 +11,7 @@
 
 <div class="container">
 
-    <div class="card">
+    <div class="card shadow-sm mb-3">
         <div class="card-body">
             <div class="row">
                 <div class="col-4">
@@ -32,7 +32,24 @@
         </div>
     </div>
 
-    <ul class="list-group">
+    <div class="card shadow-sm mb-3">
+        <div class="card-body">
+            <form th:action="@{${'/publication/message/' + publication.id}}" th:object="${publicationMessage}" method="post">
+                <div class="row">
+                    <div class="col-8">
+                        <div class="form-group">
+                            <input type="text" class="form-control" th:field="*{message}" id="message" placeholder="Ingresá tu Mensaje" required>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <button type="submit" class="btn btn-outline-primary">Enviar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <ul class="list-group shadow-sm">
         <li class="list-group-item" th:each="msg : ${publication.messages}">[<b th:text="${msg.messageDateTime}"></b>]: <span th:text="${msg.message}"></span></li>
     </ul>
 
@@ -41,6 +58,10 @@
 </div>
 
 <div th:replace="common/bottom :: body-bottom-scripts"/>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<!--<script th:src="@{/js/ws.js}"></script>-->
 
 </body>
 </html>
