--- a/src/main/resources/templates/publication/detail.html
+++ b/src/main/resources/templates/publication/detail.html
@@ -21,6 +21,7 @@
                 </div>
                 <div class="col-8">
                     <h3 class="card-title" th:text="${publication.title}">Card title</h3>
+                    <a href="#" th:text="${publication.client.username}"></a>
                     <p class="card-text" th:text="${publication.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
@@ -33,24 +34,27 @@
     </div>
 
     <div class="card shadow-sm mb-3">
+        <input type="hidden" id="publicationId" th:value="${publication.id}">
         <div class="card-body">
-            <form th:action="@{${'/publication/message/' + publication.id}}" th:object="${publicationMessage}" method="post">
-                <div class="row">
-                    <div class="col-8">
-                        <div class="form-group">
-                            <input type="text" class="form-control" th:field="*{message}" id="message" placeholder="Ingresá tu Mensaje" required>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <button type="submit" class="btn btn-outline-primary">Enviar</button>
+            <div class="row">
+                <div class="col-8">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="msg" placeholder="Ingresá tu Mensaje" required>
                     </div>
                 </div>
-            </form>
+                <div class="col-4">
+                    <button type="button" id="send" class="btn btn-outline-primary">Enviar</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <ul class="list-group shadow-sm">
-        <li class="list-group-item" th:each="msg : ${publication.messages}">[<b th:text="${msg.messageDateTime}"></b>]: <span th:text="${msg.message}"></span></li>
+    <ul class="list-group shadow-sm" id="messages">
+        <li class="list-group-item" th:each="msg : ${publication.messages}">
+            [<b th:text="${#temporals.format(msg.messageDateTime, 'yyyy/MM/dd HH:mm:ss')}"></b>]
+            <a href="#"><span th:text="${msg.client.username}"></span></a>:
+            <span th:text="${msg.message}"></span>
+        </li>
     </ul>
 
     <footer th:replace="common/footer :: footer"/>
@@ -61,7 +65,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<!--<script th:src="@{/js/ws.js}"></script>-->
+<script th:src="@{/js/ws.js}"></script>
 
 </body>
 </html>
