--- a/src/main/resources/templates/publication/detail.html
+++ b/src/main/resources/templates/publication/detail.html
@@ -40,6 +40,7 @@
                 <div class="col-8">
                     <div class="form-group">
                         <input type="text" class="form-control" id="msg" placeholder="Ingresá tu Mensaje" required>
+                        <div class="invalid-feedback d-block" id="err"></div>
                     </div>
                 </div>
                 <div class="col-4">
@@ -65,7 +66,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script th:src="@{/js/ws.js}"></script>
+<script th:src="@{/js/publication.js}"></script>
 
 </body>
 </html>
