--- a/src/main/resources/templates/publication/detail.html
+++ b/src/main/resources/templates/publication/detail.html
@@ -27,7 +27,7 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <a th:href="@{${'/publication/' + publication.id + '/update'}}" class="btn btn-lg btn-block btn-outline-primary">Actualizar</a>
+                    <a th:href="@{${'/publication/update/' + publication.id}}" class="btn btn-lg btn-block btn-outline-primary">Actualizar</a>
                 </div>
             </div>
         </div>
