--- a/src/main/resources/templates/publication/form.html
+++ b/src/main/resources/templates/publication/form.html
@@ -31,8 +31,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="amount">Precio</label>
-                                <input type="number" class="form-control" min="0" value="0" step="0.10" th:errorclass="is-invalid" th:field="*{amount}" id="amount" placeholder="Ingresá el Precio" required>
+                                <input type="number" class="form-control" min="0" step="0.10" th:errorclass="is-invalid" th:field="*{amount}" id="amount" placeholder="Ingresá el Precio" required>
                                 <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"></div>
+                            </div>
+                            <div class="form-group">
+                                <label for="startDateTime">Fecha-Hora</label>
+                                <input type="datetime-local" class="form-control" th:errorclass="is-invalid" th:field="*{startDateTime}" id="startDateTime" placeholder="Ingresá la Fecha-Hora" required>
+                                <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('startDateTime')}" th:errors="*{startDateTime}"></div>
                             </div>
                             <hr>
                             <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Guardar</button>
