--- a/src/main/resources/templates/publication/buyer/detail.html
+++ b/src/main/resources/templates/publication/buyer/detail.html
@@ -25,11 +25,6 @@
                     <p class="card-text" th:text="${publication.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <a th:href="@{${'/publication/update/' + publication.id}}" class="btn btn-lg btn-block btn-outline-primary">Actualizar</a>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -59,7 +54,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script th:src="@{/js/publication.js}"></script>
+<script th:src="@{/js/buyer/publication.js}"></script>
 
 </body>
 </html>
