--- a/src/main/resources/templates/publication/seller/detail.html
+++ b/src/main/resources/templates/publication/seller/detail.html
@@ -21,29 +21,12 @@
                 </div>
                 <div class="col-8">
                     <h3 class="card-title" th:text="${publication.title}">Card title</h3>
-                    <a href="#" th:text="${publication.client.username}"></a>
                     <p class="card-text" th:text="${publication.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4">
                     <a th:href="@{${'/publication/update/' + publication.id}}" class="btn btn-lg btn-block btn-outline-primary">Actualizar</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="card shadow-sm mb-3">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-8">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="msg" placeholder="Ingresá tu Mensaje" required>
-                        <div class="invalid-feedback d-block" id="err"></div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <button type="button" id="send" class="btn btn-outline-primary">Enviar</button>
                 </div>
             </div>
         </div>
@@ -59,7 +42,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script th:src="@{/js/publication.js}"></script>
+<script th:src="@{/js/seller/publication.js}"></script>
 
 </body>
 </html>
