--- a/src/main/resources/templates/publication/buyer/detail.html
+++ b/src/main/resources/templates/publication/buyer/detail.html
@@ -18,6 +18,8 @@
                     <img th:src="@{${'/publication/img/' + publication.id}}" class="card-img-top" alt="...">
                     <hr>
                     <h2 class="card-price text-center" th:text="${'$' + #numbers.formatDecimal(publication.amount, 0, 2, 'POINT')}">$0</h2>
+                    <hr>
+                    <p class="text-center">Disponible hasta el: <span th:text="${#temporals.format(publication.endDateTime, 'yyyy/MM/dd HH:mm:ss')}"></span></p>
                 </div>
                 <div class="col-8">
                     <h3 class="card-title" th:text="${publication.title}">Card title</h3>
@@ -54,6 +56,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script th:src="@{/js/moment.min.js}"></script>
 <script th:src="@{/js/buyer/publication.js}"></script>
 
 </body>
