--- a/src/main/resources/templates/publication/seller/detail.html
+++ b/src/main/resources/templates/publication/seller/detail.html
@@ -42,6 +42,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script th:src="@{/js/moment.min.js}"></script>
 <script th:src="@{/js/seller/publication.js}"></script>
 
 </body>
