--- a/src/main/resources/templates/common/bottom.html
+++ b/src/main/resources/templates/common/bottom.html
@@ -4,4 +4,5 @@
     <script th:src="@{/js/jquery-3.4.0.min.js}"></script>
     <script th:src="@{/js/popper.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/mdb.min.js}"></script>
 </div>
