--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,5 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" th:href="@{/img/favicon.ico}">
     <title>Vende por 48</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/mdb.min.css}" rel="stylesheet"/>
 </head>
