--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -22,18 +22,39 @@
             <!-- Left -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link waves-effect" data-scroll href="#trabajos">SUSCRIBIRME</a>
+                    <a class="nav-link waves-effect red-text" data-scroll href="#trabajos">SUSCRIBIRME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect" data-scroll href="#oficinas">COMPRAR</a>
+                    <a class="nav-link waves-effect red-text" data-scroll href="#oficinas">COMPRAR</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect" data-scroll href="#contacto">VENDER</a>
+                    <a class="nav-link waves-effect red-text" data-scroll href="#contacto">VENDER</a>
                 </li>
             </ul>
         </div>
 
         <!-- Right -->
+        <ul sec:authorize="!isAuthenticated()" class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link red-text" th:href="@{/signup}">Creá tu cuenta</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link red-text" th:href="@{/signin}">Ingresá</a>
+            </li>
+        </ul>
+        <ul sec:authorize="isAuthenticated()" class="navbar-nav">
+            <li class="nav-item">
+                <span class="nav-link active" sec:authentication="principal.username"></span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link red-text" th:href="@{/publication/new}">Publicá</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link red-text" th:href="@{/logout}">Salir</a>
+            </li>
+        </ul>
+        <!--
+
         <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item wow animated fadeInDown">
                 <a href="https://www.facebook.com/" class="btn-floating btn-sm btn-email" type="button" role="button" target="_blank" style="background: rgba(206,36,113,1);
@@ -61,6 +82,7 @@
                 </a>
             </li>
         </ul>
+        -->
     </div>
 </nav>
 
