--- a/src/main/resources/templates/publication/index.html
+++ b/src/main/resources/templates/publication/index.html
@@ -1,15 +1,125 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: common-header"/>
+<!DOCTYPE html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="common-header">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" th:href="@{/img/favicon.ico}">
+    <title>Vende por 48</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"/>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/mdb.min.css}" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css" rel="stylesheet">
+    <style>
+       .swiper-container {
+          width: 100%;
+          padding-top: 50px;
+          padding-bottom: 50px;
+        }
+        .swiper-slide {
+          background-position: center;
+          background-size: cover;
+          width: 300px;
+          height: 300px;
+        }
+    </style>
+</head>
 
 <body>
 
 <nav th:replace="common/navbar :: navbar"/>
 
+<div class="container-fluid">
+
+    <div class="row">
+        <div id="carousel-main-fade" class="carousel slide carousel-fade mt-30" data-ride="carousel" style="padding-top:1px">
+            <div class="carousel-inner" id="inicio">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://vendeen48.000webhostapp.com/img/carrusell/foto1.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://vendeen48.000webhostapp.com/img/carrusell/foto2.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://vendeen48.000webhostapp.com/img/carrusell/foto3.jpg" alt="Third slide">
+                    <div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-main-fade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previo</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-main-fade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/vehiculos.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/super.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/repuestos.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/ropa.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/viajes.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/hogarymueblesjpg.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/comidas.jpg" alt="...">
+                <div class="card-body">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-slide" >
+            <div class="card">
+                <img class="card-img-top" src="https://vendeen48.000webhostapp.com/img/ofertas/electro.jpg" alt="...">
+                <div class="card-body"></div>
+            </div>
+        </div>
+
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+</div>
 
 <div class="container">
-
     <div class="row">
         <div th:each="publication : ${publications}" class="col-4">
             <!--/*@thymesVar id="publication" type="ar.com.vendepor.vendepor48.domain.Publication"*/-->
@@ -28,12 +138,36 @@
             </div>
         </div>
     </div>
-
-    <footer th:replace="common/footer :: footer"/>
-
 </div>
 
+<footer th:replace="common/footer :: footer"/>
+
 <div th:replace="common/bottom :: body-bottom-scripts"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+
+<script>
+var swiper = new Swiper('.swiper-container', {
+    autoplay:true,
+    autoplay: {
+        delay: 9000,
+    },
+    initialSlide:1,
+    effect: 'coverflow',
+    grabCursor: true,
+    centeredSlides: true,
+    slidesPerView: 'auto',
+    coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 200,
+        modifier: 1,
+        slideShadows : false,
+    },
+    pagination: {
+        el: '.swiper-pagination',
+    }
+});
+</script>
 
 </body>
 </html>
