Added style and html

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,9 +1,33 @@
-<!DOCTYPE html>
-<html lang="es">
-<footer class="pt-4 my-md-4 pt-md-4 border-top">
-    <div class="row">
-        <div class="col-12 col-md">
-            <small class="d-block mb-3 text-muted">Copyright &copy; 2019</small>
-        </div>
+<footer class="page-footer font-smallpt-4" style="background: rgba(206,36,113,1);
+    background: -moz-linear-gradient(left, rgba(206,36,113,1) 0%, rgba(222,90,78,1) 31%, rgba(241,155,34,1) 99%, rgba(241,155,34,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(206,36,113,1)), color-stop(31%, rgba(222,90,78,1)), color-stop(99%, rgba(241,155,34,1)), color-stop(100%, rgba(241,155,34,1)));
+    background: -webkit-linear-gradient(left, rgba(206,36,113,1) 0%, rgba(222,90,78,1) 31%, rgba(241,155,34,1) 99%, rgba(241,155,34,1) 100%);
+    background: -o-linear-gradient(left, rgba(206,36,113,1) 0%, rgba(222,90,78,1) 31%, rgba(241,155,34,1) 99%, rgba(241,155,34,1) 100%);
+    background: -ms-linear-gradient(left, rgba(206,36,113,1) 0%, rgba(222,90,78,1) 31%, rgba(241,155,34,1) 99%, rgba(241,155,34,1) 100%);
+    background: linear-gradient(to right, rgba(206,36,113,1) 0%, rgba(222,90,78,1) 31%, rgba(241,155,34,1) 99%, rgba(241,155,34,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ce2471', endColorstr='#f19b22', GradientType=1; );}">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+        <!-- Call to action -->
+        <ul class="list-unstyled list-inline text-center py-2">
+            <li class="list-inline-item">
+                <h5 class="mb-1"><sttrong>TODO LO QUE QUERES EN SOLO 48 Hs</sttrong></h5>
+            </li>
+            <li class="list-inline-item">
+                <a href="#" class="btn btn-outline-white btn-rounded waves-effect waves-light"><sttrong>CONSULTAR</sttrong></a>
+            </li>
+        </ul>
+        <!-- Call to action -->
+
     </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="#"> VENDE EN 48</a>
+    </div>
+    <!-- Copyright -->
+
 </footer>
